syntax="proto3";


option go_package="protos/adminProto";

service AdminService {
    rpc AddNewAdmin(AdminInfo) returns (AdminResponse){}
    rpc DeleteAdmin(AdminID) returns (AdminResponse){}
}

message AdminInfo {
    string id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    string role = 5;
}

message AdminID{
    string  id = 1;
}
message AdminResponse {
    string id = 1;
    string hash_password = 2;
    string status = 3;  
}